// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas sobre GifExpertApp debe crear snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`pruebas sobre GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="dragon ball"
    key="dragon ball"
  />
  <GifGrid
    category="ninja scroll"
    key="ninja scroll"
  />
</Fragment>
`;
